<resources>
    <string name="app_name">AmiiboScanner</string>
    <string name="load_tag_button">Load Tag</string>
    <string name="save_file_button">Save File</string>
    <string name="load_file_button">Load File</string>
    <string name="restore_tag_button">Restore Tag</string>
    <string name="placeholder_char_name">Character</string>
    <string name="placeholder_series_name">Series</string>
    <string name="file_name">File name</string>
    <string name="save_dlg">Save File</string>
</resources>